src/test/ui/issue-3044.stderr
error[E0061]: this function takes 2 parameters but 1 parameter was supplied
  --> $DIR/issue-3044.rs:14:23
   |
14 |     needlesArr.iter().fold(|x, y| {
   |                       ^^^^ expected 2 parameters

error: aborting due to previous error

